--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="container">
         <div class="location_main">
           <div class="call_text"><img src="images/call-icon.png"></div>
-          <div class="call_text"><a href="https://wa.me/917599379883" target="_blank">Call
+          <div class="call_text"><a href="tel:+917599379883">Call
               +91 7599379883</a></div>
           <div class="call_text"><img src="images/mail-icon.png"></div>
           <div class="call_text"><a href="mailto:roofviewstudio@gmail.com">roofviewstudio@gmail.com</a></div>
