--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
     <div class="footer_section layout_padding">
       <div class="container">
         <div class="location_main">
-          <div class="call_text"><img src="images/call-icon.png"></div>
+          <div class="call_text"><a href="tel:+917599379883"><img src="images/call-icon.png"></a></div>
           <div class="call_text"><a href="tel:+917599379883">Call
               +91 7599379883</a></div>
-          <div class="call_text"><img src="images/mail-icon.png"></div>
+          <div class="call_text"><a href="mailto:roofviewstudio@gmail.com"><img src="images/mail-icon.png"></a></div>
           <div class="call_text"><a href="mailto:roofviewstudio@gmail.com">roofviewstudio@gmail.com</a></div>
         </div>
         <div class="social_icon">
