--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
     <div class="services_section layout_padding">
       <div class="container">
         <h1 class="services_taital">Services </h1>
-        <p class="services_text">There are many variations of passages of Lorem
-          Ipsum available, but the majority have suffered alteration</p>
         <div class="services_section_2">
           <div class="row">
             <div class="col-md-4">
@@ -127,7 +125,7 @@
               <div class="carousel-item active">
                 <div class="client_main">
                   <div class="box_left">
-                    <p class="lorem_text">Stunning work, great communicator and fast and adaptable when change is required!</p>
+                    <p class="lorem_text">Stunning work, great communicator, fast and adaptable when change is required!</p>
                   </div>
                   <div class="box_right">
                     <div class="client_taital_left">
