--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="col-md-4">
               <div><img src="images/img-2.png" class="services_img"></div>
-              <div class="btn_main active"><a href="#">3D Modelling</a></div>
+              <div class="btn_main"><a href="#">3D Modelling</a></div>
             </div>
             <div class="col-md-4">
               <div><img src="images/img-3.png" class="services_img"></div>
