--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- services section start -->
     <div class="services_section layout_padding">
       <div class="container">
-        <h1 class="services_taital">Services </h1>
+        <h1 class="client_taital">Services </h1>
         <div class="services_section_2">
           <div class="row">
             <div class="col-md-4">
