--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <!-- Hero Section Begin -->
     <section class="hero">
-        <div class="hero__slider owl-carousel">
+        <div >
             <div class="hero__items set-bg" data-setbg="img/hero/hero-1.jpg">
                 <div class="hero__text">
                     <div class="hero__social">
