--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
                 <div class="col-lg-8">
                     <div class="blog__item__list">
                         <div class="blog__item">
-                            <h4>Our projects are currently under <br />Non-Disclosure Agreements (NDAs), awaiting permission for publication.<br />Once granted, they'll be swiftly added.</h4>
+                            <p>Our projects are currently under <br />Non-Disclosure Agreements (NDAs), awaiting permission for publication.<br />Once granted, they'll be swiftly added.</p>
 					</div>
                 </div>
             </div>
