--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Stunning work, great communicator and fast, adaptable when change is required!”</p>
+                                    <p>“Stunning work, great communicator, fast and adaptable when change is required!”</p>
                                 </div>
                             </div>
                         </div>
