--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                 <img src="img/testimonial/kian.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Kian Ormond</h5>
+                                <h5>Karl Oswald</h5>
                                 <span>Customer</span>
                             </div>
                         </div>
