--- a/index.html
+++ b/index.html
@@ -97,66 +97,66 @@
     </section>
     <!-- Hero Section End -->
 
-    <!-- Services Section Begin -->
-    <section class="services spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <span>Our specialization</span>
-                        <h2>What we do</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="services__item">
-                        <img src="img/services/services-1.png" alt="">
-                        <h4>Interior & Exterior Design</h4>
-                        <p>Our team crafts meticulously detailed designs for both indoor and outdoor spaces, ensuring functionality, aesthetics, and harmony.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="services__item">
-                        <img src="img/services/services-3.png" alt="">
-                        <h4>3D Modelling</h4>
-                        <p><br />We transform concepts into lifelike 3D models, providing you with a realistic visualization of your project before construction begins.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="services__item">
-                        <img src="img/services/services-2.png" alt="">
-                        <h4>Commercial Design</h4>
-                        <p>From retail stores to office buildings, we create innovative designs that enhance brand identity and customer experience.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="services__item">
-                        <img src="img/services/services-4.png" alt="">
-                        <h4>Space Planning</h4>
-                        <p><br />Our expertise in space planning maximizes efficiency and flow within your space, optimizing layouts for both residential and commercial projects.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="services__item">
-                        <img src="img/services/services-5.png" alt="">
-                        <h4>Rendering Service</h4>
-                        <p>Enhancing 3D models with detailed design elements, materials, and lighting scenarios for vivid visualizations of your architectural projects.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="services__item">
-                        <img src="img/services/services-6.png" alt="">
-                        <h4>Product Visualization</h4>
-                        <p>We create stunning renderings and animations that showcase product designs with precision and realism, elevating your marketing.</p>
-                    </div>
+<!-- Services Section Begin -->
+<section class="services spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <span>Our specialization</span>
+                    <h2>What we do</h2>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Services Section End -->
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="services__item">
+                    <img src="img/services/services-1.png" alt="">
+                    <h4>Interior & Exterior Design</h4>
+                    <p>Our team crafts meticulously detailed designs for both indoor and outdoor spaces, ensuring functionality, aesthetics, and harmony.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="services__item">
+                    <img src="img/services/services-3.png" alt="">
+                    <h4>3D Modelling</h4>
+                    <p><br />We transform concepts into lifelike 3D models, providing you with a realistic visualization of your project before construction begins.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="services__item">
+                    <img src="img/services/services-2.png" alt="">
+                    <h4>Commercial Design</h4>
+                    <p>From retail stores to office buildings, we create innovative designs that enhance brand identity and customer experience.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="services__item">
+                    <img src="img/services/services-4.png" alt="">
+                    <h4>Space Planning</h4>
+                    <p><br />Our expertise in space planning maximizes efficiency and flow within your space, optimizing layouts for both residential and commercial projects.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6 offset-lg-3">
+                <div class="services__item">
+                    <img src="img/services/services-5.png" alt="">
+                    <h4>Rendering Service</h4>
+                    <p>Enhancing 3D models with detailed design elements, materials, and lighting scenarios for vivid visualizations of your architectural projects.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="services__item">
+                    <img src="img/services/services-6.png" alt="">
+                    <h4>Product Visualization</h4>
+                    <p>We create stunning renderings and animations that showcase product designs with precision and realism, elevating your marketing.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Services Section End -->
 
     <!-- Project Section Begin -->
     <section class="project">
