--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
-    <header class="header header-normal set-bg" data-setbg="img/little-header.jpg">
+    <header class="header">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
@@ -76,6 +76,11 @@
         </div>
     </header>
     <!-- Header Section End -->
+
+    <!-- Breadcrumb Section Begin -->
+    <div class="breadcrumb-option-contact spad set-bg" data-setbg="img/little-header.jpg">
+    </div>
+    <!-- Breadcrumb Section End -->
 
     <!-- Contact Section Begin -->
     <section class="contact spad">
