--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png_l" alt=""></a>
+                        <a href="./index.html"><img src="img/logo_l.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
