--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a href="./index.html"><img src="img/logo_l.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <a href="./index.html"><img src="img/logo_l.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -178,7 +178,7 @@
                 <div  class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                            <a href="./index.html"><img src="img/logo_l.png" alt=""></a>
                         </div>
                         <p>144, Baccha Park,<br /> Near St. Thomas Church <br />Meerut, Uttar Pradesh 250002</p>
                         <ul>
