--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 <div  class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                            <a href="./index.html"><img src="img/logo_l.png" alt=""></a>
                         </div>
                         <p>144, Baccha Park,<br /> Near St. Thomas Church <br />Meerut, Uttar Pradesh 250002</p>
                         <ul>
