--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                                 <img src="img/testimonial/marck.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Marc Koch</h5>
+                                <h5>Mark Knox</h5>
                                 <span>Customer</span>
                             </div>
                         </div>
@@ -318,7 +318,7 @@
                                 <img src="img/testimonial/gw.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Greg Welsh</h5>
+                                <h5>Glen Wells</h5>
                                 <span>Customer</span>
                             </div>
                         </div>
@@ -327,7 +327,7 @@
                                 <img src="img/testimonial/dillona.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Dillon A</h5>
+                                <h5>Darren K</h5>
                                 <span>Customer</span>
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                                 <img src="img/testimonial/rajeevm.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Rajeev M</h5>
+                                <h5>Ranjit L</h5>
                                 <span>Customer</span>
                             </div>
                         </div>
