--- a/index.html
+++ b/index.html
@@ -408,7 +408,9 @@
                         <div class="copyright__text">
                             <p>Copyright © <script>
                                 document.write(new Date().getFullYear());
-                            </script> All rights reserved. 
+                            </script> All rights reserved | This template is made with <i class="fa fa-heart-o"
+                            aria-hidden="true"></i> by <a href="https://colorlib.com"
+                            target="_blank">Colorlib</a> 
                         </p>
                     </div>
                 </div>
