--- a/VR.html
+++ b/VR.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Panellum Viewer Container -->
-    <div id="panorama" style="width: 100%; height: 500px;"></div>
+    <div id="panorama" style="width: 75%; height: 75%;"></div>
 
     <!-- Include Panellum JS -->
     <script src="assets/pannellum/pannellum.js"></script>
