--- a/VR2.html
+++ b/VR2.html
@@ -1,32 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>360° Image Viewer</title>
-    <!-- Include Photo Sphere Viewer CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@5.0.4/dist/photo-sphere-viewer.css">
+    <!-- for optimal display on high DPI devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/core/index.min.css" />
 </head>
-<body>
-    <!-- Viewer Container -->
-    <div id="viewer" style="width: 100%; height: 500px;"></div>
 
-    <!-- Include Photo Sphere Viewer JS -->
-    <script src="https://cdn.jsdelivr.net/npm/uevent@2.0.0/browser.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@5.0.4/dist/photo-sphere-viewer.min.js"></script>
+<!-- the viewer container must have a defined size -->
+<div id="viewer" style="width: 100vw; height: 100vh;"></div>
 
-    <script>
-        const viewer = new PhotoSphereViewer.Viewer({
-            container: document.querySelector('#viewer'),
-            panorama: 'img/VR_test.jpg', // Replace with your image path
-            navbar: [
-                'autorotate',
-                'zoom',
-                'fullscreen'
-            ],
-            defaultYaw: '130deg', // Adjust initial view
-        });
-    </script>
-</body>
-</html>
+<script type="importmap">
+    {
+        "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three/build/three.module.js",
+            "@photo-sphere-viewer/core": "https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/core/index.module.js"
+        }
+    }
+</script>
+
+<script type="module">
+    import { Viewer } from '@photo-sphere-viewer/core';
+
+    const viewer = new Viewer({
+        container: document.querySelector('#viewer'),
+        panorama: 'img/VR_test.jpg',
+    });
+</script>
