--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
     <link rel="stylesheet" href="css/slick.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="shortcut icon" type="image/x-icon" href="img/mlogo.ico" />
+
+	
+    <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6XTB2655W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L6XTB2655W');
+</script>
+  <!-- End Google Analytics -->
+
+	
 </head>
 
 <body>
