--- a/project-details.html
+++ b/project-details.html
@@ -128,7 +128,7 @@
                         <div class="footer__logo">
                             <a href="./index.html"><img src="img/logo_l.png" alt=""></a>
                         </div>
-                        <p>144, Baccha Park,<br /> Near St. Thomas Church <br />Meerut, Uttar Pradesh 250002</p>
+                        <p>144, Near Baccha Park,<br />Thapar Nagar Road,<br />Meerut, Uttar Pradesh 250001</p>
                         <ul>
                             <li class="footer__social"><a href="mailto:roofviewstudio@gmail.com">roofviewstudio@gmail.com</a></li>
                             <li class="footer__social"><a href="tel:+917599379883" target="_blank">+91 75993 79883</a></li>
