--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                         </div>
                         <div class="contact__widget__item__text">
                             <h5>Office Location</h5>
-                            <span>144, Baccha Park,<br /> Near St. Thomas Church <br />Meerut, Uttar Pradesh 250002</span>
+                            <span>144, Near Baccha Park,<br /> Thapar Nagar Road, <br />Meerut, Uttar Pradesh 250001</span>
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                         <div class="footer__logo">
                             <a href="./index.html"><img src="img/logo_l.png" alt=""></a>
                         </div>
-                        <p>144, Baccha Park,<br /> Near St. Thomas Church <br />Meerut, Uttar Pradesh 250002</p>
+                        <p>144, Near Baccha Park,<br />Thapar Nagar Road,<br />Meerut, Uttar Pradesh 250001</p>
                         <ul>
                             <li class="footer__social"><a href="mailto:roofviewstudio@gmail.com">roofviewstudio@gmail.com</a></li>
                             <li class="footer__social"><a href="tel:+917599379883" target="_blank">+91 75993 79883</a></li>
