--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d616.9664192338386!2d77.70562835984973!3d28.984730321517567!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1707418391056!5m2!1sen!2sin" width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d268.97172873573163!2d77.7054919887371!3d28.98441065079147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390c631000000001%3A0xe0f5e3f076079520!2sroof%20view%20studio!5e1!3m2!1sen!2sin!4v1732259861892!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             
         </div>
