--- a/index.html
+++ b/index.html
@@ -256,12 +256,13 @@
     <!-- Project Section End -->
 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg">
+    <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg" style="padding-bottom: 50px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
-                        <h2>Testimonials</h2>
+                        <span>Testimonials</span>
+                        <h2>What our clients say</h2>
                     </div>
                 </div>
             </div>
@@ -271,11 +272,17 @@
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“Good communication, work was done before time will definately hire again.”</p>
+                                    <p>"The attention to detail was second to none, and they read the plans correctly, which meant very few revisions were needed. I'm very happy with the results."</p>
                                 </div>
                             </div>
                         </div>
-
+                        <div class="testimonial__item">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-xl-9 col-lg-10">
+                                    <p>“Thanks for the great work! Very professional, yet friendly. I felt comfortable discussing everything with them.”</p>
+                                </div>
+                            </div>
+                        </div>
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
@@ -286,14 +293,21 @@
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-xl-9 col-lg-10">
-                                    <p>“He really knew how to fix the errors on my imported models. I would hire him again if I have any issues in the future that I can't resolve myself. Thanks !!!!”</p>
+                                    <p>“They really knew how to fix the issues in my project. Everything was sorted quickly and properly. I’ll definitely reach out again if I face something I can't handle myself. Thanks a lot!!!”</p>
                                 </div>
                             </div>
                         </div>
                         <div class="testimonial__item">
                             <div class="row d-flex justify-content-center">
                                 <div class="col-lg-9">
-                                    <p>“Thanks for the great work!”</p>
+                                    <p>“Team is very helpful and easy to talk to. They understood our need quickly and did a good job.”</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial__item">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-lg-9">
+                                    <p>“Good communication, work was done before time will definately hire again.”</p>
                                 </div>
                             </div>
                         </div>
@@ -305,45 +319,62 @@
                     <div class="testimonial__client">
                         <div class="testimonial__client__item add">
                             <div class="testimonial__client__pic">
-                                <img src="img/testimonial/marck.png" alt="">
+                                <img src="img/testimonial/Tim.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Mark Knox</h5>
-                                <span>Customer</span>
+                                <h5>Tim Dunlop</h5>
+                                <span>Client</span>
                             </div>
                         </div>
-
+                        <div class="testimonial__client__item">
+                            <div class="testimonial__client__pic">
+                                <img src="img/testimonial/ranjeet.png" alt="">
+                            </div>
+                            <div class="testimonial__client__text">
+                                <h5>Ranjit K</h5>
+                                <span>Client</span>
+                            </div>
+                        </div>
                         <div class="testimonial__client__item">
                             <div class="testimonial__client__pic">
                                 <img src="img/testimonial/gw.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
                                 <h5>Glen Wells</h5>
-                                <span>Customer</span>
+                                <span>Client</span>
                             </div>
                         </div>
                         <div class="testimonial__client__item">
                             <div class="testimonial__client__pic">
-                                <img src="img/testimonial/dillona.png" alt="">
+                                <img src="img/testimonial/darren.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
                                 <h5>Darren K</h5>
-                                <span>Customer</span>
+                                <span>Client</span>
                             </div>
                         </div>
                         <div class="testimonial__client__item">
                             <div class="testimonial__client__pic">
-                                <img src="img/testimonial/rajeevm.png" alt="">
+                                <img src="img/testimonial/Nadeem.png" alt="">
                             </div>
                             <div class="testimonial__client__text">
-                                <h5>Ranjit L</h5>
-                                <span>Customer</span>
+                                <h5>Mohd Nadeem</h5>
+                                <span>Client</span>
+                            </div>
+                        </div>
+                        <div class="testimonial__client__item">
+                            <div class="testimonial__client__pic">
+                                <img src="img/testimonial/marck.png" alt="">
+                            </div>
+                            <div class="testimonial__client__text">
+                                <h5>Mark Knox</h5>
+                                <span>Client</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </section>
     <!-- Testimonial Section End -->
